# PLENA_Compiler

./: .gitignore  BTMM_LINEAR_PLAN.md  README.md  ROPE_SHUFFLE_PLAN.md  SPMD_REWRITE.md  pyproject.toml
aten/: moe.py  (+16 more)
generator/: README.md  aten_runner.py  pyproject.toml  runner.py
generator/multi_model/: README.md  README_cn.md  playground.py  plena_backend.py  run.py  test_utilization_report.py  test_vlm_codegen.py  test_vlm_parser.py  utilization_report.py  utilization_report_run.py  vlm_codegen.py  vlm_codegen_env.py  vlm_codegen_generator.py  vlm_codegen_handlers.py  vlm_parser.py  vlm_parser_run.py
generator/multi_model/asm_lib/: README_cn.md  developer_compiler.py  plena_program.py  qwen3_vl_vision_mlp.py
generator/multi_model/model/: TRANSFOMER_ENCODER.py
generator/multi_model/outputs/: .gitignore  model_info.json
generator/multi_model/outputs/preview/: preview_asm_nodes.sh  preview_asm_unknown.sh
generator/multi_model/test/: test_utilization_report.py  test_vlm_codegen.py
generator/parser/: hardware_parser.py  llm_parser.py  plena_backend.py  test_vlm_parser.py  vlm_codegen.py  vlm_parser.py
generator/parser/outputs/: .gitignore  plena.asm  trace.txt
generator/parser/outputs/preview/: preview.sh  (+1 more)
generator/passes/: code_gen.py  utilization_report.py
generator/scheduler/: mem_layout_lib.json  reg_assignment_lib.json  scheduler.py
generator/tests/: test_attention_code_gen.py  test_codegen_contracts.py  test_embedding_code_gen.py  test_generator_e2e.py  test_llm_parser.py  test_vector_code_gen.py  test_vlm_code_gen.py  test_vlm_parser.py
(+360 files in other folders)
