[project]
name = "plena-compiler"
version = "0.1.0"
description = "PLENA assembly compiler and code generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "assembler",
    "asm_templates",
    "aten",
    "generator",
    "sim_env_utils",
    "utils",
]
