[project]
name = "compiler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7.1",
    "transformers>=4.57.0",
    "huggingface-hub>=0.20.0",
    "requests>=2.31.0",
    "tomlkit>=0.13.2",
    "pillow>=12.1.1",
    "qwen-vl-utils>=0.0.14",
    "torchvision>=0.22.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]

[tool.ruff]
indent-width = 4
line-length = 120

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "UP",  # pyupgrade
    "I",   # isort
    "NPY", # numpy
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "RUF",
]
